<resources>
    <string name="app_name">specialisedfitness</string>
    <string name="workout_tracker_app">Workout Tracker App</string>
    <string name="welcome_to_the_workout_tracker_app_select_an_ailment_from_the_menu_to_get_started">Welcome to the Workout Tracker App! Select an ailment from the menu to get started.</string>
    <string name="lower_back_pain">Lower Back Pain</string>
    <string name="ailments_menu">List of ailments</string>
    <string name="ailment_description">Ailment Description</string>
    <string name="questions">Questions:</string>
    <string name="workouts">Workouts:</string>
    <string name="start_workout_tracking">Start Workout Tracking</string>
    <string name="accelerometer_data">Accelerometer Data</string>
    <string name="gyroscope_data">Gyroscope Data</string>
    <string name="perform_lower_back_stretches_and_adjust_posture_based_on_sensor_data">Perform lower back stretches and adjust posture based on sensor data.</string>
    <string name="view_ailments">View Ailments</string>
    <string name="ailments">Ailments</string>
    <string name="plank_workout">Plank Workout</string>
    <string name="get_ready_to_plank">Get Ready to Plank!</string>
    <string name="timer_0s">Timer: 0s</string>
    <string name="planks_completed_0">Planks Completed: 0</string>
    <string name="bird_dog_workout">bird_dog_workout</string>
    <string name="workout_status">workout_status</string>
    <string name="tracker_label">tracker_label</string>
    <string name="overall_count_label">overall_count_label</string>
    <string name="pelvic_tilt_workout">pelvic_tilt_workout</string>
    <string name="set_time_threshold_seconds">Set Time Threshold (seconds):</string>
    <string name="e_g_5">e.g. 5</string>
    <string name="set_count_threshold">Set Count Threshold:</string>
    <string name="e_g_10">e.g. 10</string>
    <string name="set_thresholds">Set Thresholds</string>
    <string name="heart_disease_information">Heart Disease Information</string>
    <string name="go_to_step_tracker">Go to Step Tracker</string>
    <string name="steps_0">Steps: 0</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="warrior2_pose">warrior2_pose</string>
    <string name="arthritis">Arthritis</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="warrior_2_pose">Warrior 2 Pose</string>
    <string name="mendwell">MENDWELL</string>
    <string name="welcome_to_ur_specialized_fitness_app">welcome to ur specialized fitness app</string>
    <string name="its_our_pleasure_to_help_you">its our pleasure to help you</string>
    <string name="login">login</string>
    <string name="choose_your_ailments">CHOOSE YOUR AILMENTS</string>
    <string name="heart">HEART</string>
    <string name="back_pain">BACK PAIN</string>
    <string name="hearts">HEART</string>
    <string name="choose_your_ailment">CHOOSE YOUR AILMENTS</string>
    <string name="back_pains">BACK PAIN</string>
    <string name="arthriti">ARTHRITIS</string>
    <string name="quality_score_label">quality_score_label</string>
</resources>