<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AilmentActivity">

    <!-- Description Text -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ailment_description"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Questions Section -->
    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Workout Section -->
    <TextView
        android:id="@+id/workoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workouts"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/questions"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Start Tracking Button -->
    <Button
        android:id="@+id/startTracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_workout_tracking"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/workoutText"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
