<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LowerBackPainActivity">

    <!-- Toolbar at the top -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/ailments"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Scrollable content area -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- LinearLayout inside ScrollView for vertically stacking buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Plank Workout Button -->
            <Button
                android:id="@+id/buttonPlankWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plank_workout"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <!-- Bird Dog Workout Button -->
            <Button
                android:id="@+id/buttonBirdDogWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bird_dog_workout"
                app:layout_constraintTop_toBottomOf="@id/buttonPlankWorkout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>


            <Button
                android:id="@+id/buttonPelvicTiltWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pelvic Tilt Workout"
                app:layout_constraintTop_toBottomOf="@id/buttonBirdDogWorkout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <!-- Add more ailment buttons here if needed -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
